--- a/debug.ipynb
+++ b/debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,10 +460,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(240, 240, 155, 4)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# vector of ones of size (240,240,155,4)\n",
+    "\n",
+    "vec = np.random.rand(240,240,155,4)\n",
+    "\n",
+    "# turn all values in [:,:,:,2] below 0.5 to 0\n",
+    "vec[:,:,:,2] = vec[:,:,:,2] * (vec[:,:,:,2] > 0.5)\n",
+    "\n",
+    "vec.shape\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -489,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Oct 13 2022, 21:15:33) \n[GCC 11.2.0]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
